--- a/src/components/AnatomySection/AnatomySection.module.css
+++ b/src/components/AnatomySection/AnatomySection.module.css
@@ -14,8 +14,9 @@
   object-fit: contain; 
   display: block;
 }
-
-.indicator {
+ 
+/* Css for helth indicators */
+.indicator {  
   position: absolute;
   font-size: 0.9rem;
   font-weight: 600;
@@ -62,5 +63,17 @@
   .indicator {
     font-size: 0.75rem;
     padding: 0.2rem 0.4rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .anatomy {
+    max-width: 250px;
+    height: 350px;
+  }
+
+  .indicator {
+    font-size: 0.7rem;
+    padding: 0.15rem 0.3rem;
   }
 }
